# netroot

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  DISCLAIMER  META  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  autogen.sh  configpxe  configure  configure.ac  dhclient.conf  dhcpd.conf  initial-fstab  initrd-init  isolinux.cfg  isolinux.msg  mkinitrd_nfsroot  mkinitrd_nfsroot.8  mklivecd  mktestimage  netroot.spec.in  nfsroot-kernel-pkg  nfsroot.init  nfsroot.spec  nfsroot.spec.in  nfsrootfun.sh  profile  pxelinux.cfg  pxelinux.msg  rc.nfsroot  rc.nfsroot-bind  rc.nfsroot-kdump  rc.nfsroot-none  (+7 more)
boot/: Makefile.am  Makefile.in  isolinux.cfg  isolinux.msg  pxelinux.cfg
config/: aclocal.m4  config.h.in  x_ac_dracut.m4
configpxe/: Makefile.am  Makefile.in  configpxe  configpxe.8.in  netroot-kdumplinks  netroot-memtestlink  netroot-postinst  netroot-prerm  netroot-rebuild  netroot-setdefault  nfsroot-kdumplinks  nfsroot-kernel-pkg.in  nfsroot-memtestlink  nfsroot-postinst  nfsroot-prerm  nfsroot-rebuild  nfsroot-setdefault
configpxe.d/: Makefile.in  configpxe.8
dracut/: Makefile  Makefile.am  Makefile.in  README  installkernel  nfsroot-postinst  nfsroot-prerm  nfsroot-rebuild  nfsroot-setdefault  xcheck  xinstall  xnfsroot.conf
dracut.nbd9/: 9nbdroot  Makefile.am  Makefile.in  installkernel  module-setup.sh  munge-cleanup.sh  nbd9root.sh  parse-9nbdroot.sh  parse-nbd9root.sh  xcheck  xinstall
etc/: Makefile.am  Makefile.in  initial-fstab  nfsroot
example/: dhcpd.conf  dnsmasq.conf  edithalt.sh  keyinit.sh
freedos/: Makefile  Makefile.am  Makefile.in  autoexec.bat  fdboot.img  fdconfig.sys  test.mk
img/: Makefile  fdconfig.sys  freedos.img
initrd/: Makefile.am  Makefile.in  initrd-init
lib/: Makefile.am  Makefile.in  nfsrootfun.sh.in
mkinitrd/: Makefile.am  Makefile.in  README  mkinitrd_nfsroot.8.in  mklivecd  mklivecd.8.in  nfsroot-kernel-pkg  nfsrootfun.sh
mklivecd/: Makefile.am  Makefile.in  mklivecd.8
mklivecd.d/: Makefile.am  Makefile.in  mklivecd
rc/: Makefile.am  Makefile.in  README  nfsroot  rc.nfsroot  rc.nfsroot-aufs  rc.nfsroot-bind  rc.nfsroot-bindnfs  rc.nfsroot-init  rc.nfsroot-kdump  rc.nfsroot-none  rc.nfsroot-ram  rc.nfsroot-rbind  rc.nfsroot-unionfs  rc.nfsroot-zram
