bootdir = /boot
boot_DATA = pxelinux.cfg pxelinux.msg

isolinuxdir = /isolinux
isolinux_DATA = isolinux.cfg isolinux.msg

# N.B. copying files from prereq packages because paths are hardwired!

isolinux_DATA += /usr/share/syslinux/isolinux.bin
isolinux_DATA += /usr/share/syslinux/memdisk
isolinux_DATA += /boot/memtest86+-4.00

boot_DATA += /usr/share/syslinux/pxelinux.0
boot_DATA += /usr/share/syslinux/memdisk
