sbin_SCRIPTS = configpxe nfsroot-rebuild nfsroot-setdefault

man8_MANS = configpxe.8

postinstdir = /etc/kernel/postinst.d
postinst_SCRIPTS = nfsroot-postinst

prermdir = /etc/kernel/prerm.d
prerm_SCRIPTS = nfsroot-prerm

EXTRA_DIST = \
	configpxe \
	configpxe.8 \
	nfsroot-rebuild \
	nfsroot-setdefault \
	nfsroot-postinst \
	nfsroot-prerm
