sbin_SCRIPTS = \
	configpxe netroot-rebuild netroot-setdefault \
	netroot-memtestlink

man8_MANS = configpxe.8

postinst_SCRIPTS = netroot-postinst

prerm_SCRIPTS = netroot-prerm

EXTRA_DIST = \
	configpxe \
	configpxe.8 \
	netroot-rebuild \
	netroot-setdefault \
	netroot-postinst \
	netroot-prerm \
	netroot-memtestlink
