rcdir = $(sysconfdir)

rc_SCRIPTS = \
	rc.nfsroot \
	rc.nfsroot-aufs \
	rc.nfsroot-bind \
	rc.nfsroot-kdump \
	rc.nfsroot-none \
	rc.nfsroot-ram \
	rc.nfsroot-rbind \
	rc.nfsroot-unionfs

initrddir = $(sysconfdir)/rc.d/init.d

initrd_SCRIPTS = nfsroot

EXTRA_DIST = \
	nfsroot \
	rc.nfsroot \
	rc.nfsroot-aufs \
	rc.nfsroot-bind \
	rc.nfsroot-kdump \
	rc.nfsroot-none \
	rc.nfsroot-ram \
	rc.nfsroot-rbind \
	rc.nfsroot-unionfs

