rcdir = $(sysconfdir)

rc_SCRIPTS = \
	rc.nfsroot \
	rc.nfsroot-init \
	rc.nfsroot-aufs \
	rc.nfsroot-bind \
	rc.nfsroot-bindnfs \
	rc.nfsroot-kdump \
	rc.nfsroot-none \
	rc.nfsroot-ram \
	rc.nfsroot-rbind \
	rc.nfsroot-unionfs

EXTRA_DIST = \
	rc.nfsroot \
	rc.nfsroot-init \
	rc.nfsroot-aufs \
	rc.nfsroot-bind \
	rc.nfsroot-bindnfs \
	rc.nfsroot-kdump \
	rc.nfsroot-none \
	rc.nfsroot-ram \
	rc.nfsroot-rbind \
	rc.nfsroot-unionfs

